[package]
name = "tynkerbase-universal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
ring = "0.17.8"
untrusted = "0.9.0"
rsa = { version = "0.9.6", features = ["pem"] }
rand = "0.8.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
brotli = "6.0.0"
lz4 = "1.25.0"
