[package]
name = "tynkerbase_universal"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.86"
ring = "0.17.8"
rand = "0.8.4"
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
brotli = "6.0.0"
bincode = "1.3.3"
sha2 = "0.10.8"
hex = "0.4.3"
rpassword = "7.3.1"
ignore = "0.4.22"
